feat: add UI components for dialog, dropdown menu, input, label, select, separator, and table

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ WHATSAPP_API_HOST=0.0.0.0
 
 # === Logging ===
 LOG_LEVEL=info
+
+# === Finance Dashboard ===
+# Your WhatsApp JID for linking the web dashboard to your account
+# Find this in your WhatsApp client logs or use format: phonenumber@s.whatsapp.net
+DEFAULT_WHATSAPP_JID=
