--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:server": "cd packages/ai-api && uv run uvicorn ai_api.main:app --reload --host 0.0.0.0 --port 8000",
     "dev:whatsapp": "pnpm --filter @ai-boilerplate/whatsapp-client dev",
     "dev:queue": "cd packages/ai-api && uv run python -m ai_api.scripts.run_stream_worker",
+    "dev:dashboard": "pnpm --filter finance-dashboard dev",
     "install:all": "pnpm install && cd packages/ai-api && uv sync",
     "lint": "eslint packages/whatsapp-client/src && cd packages/ai-api && uv run ruff check .",
     "lint:fix": "eslint packages/whatsapp-client/src --fix && cd packages/ai-api && uv run ruff check . --fix",
