--- a/packages/ai-api/.env.local.example
+++ b/packages/ai-api/.env.local.example
@@ -10,3 +10,8 @@
 # WhatsApp Client (for agent tools)
 # WHATSAPP_CLIENT_URL=http://localhost:3001
 # WHATSAPP_CLIENT_TIMEOUT=30
+
+# Finance Dashboard (single-user mode)
+# Set this to your WhatsApp JID to link the dashboard to your account
+# Example: 1234567890@s.whatsapp.net
+DEFAULT_WHATSAPP_JID=
