--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,28 @@ services:
       - aiagent-network
     restart: unless-stopped
 
+  dashboard:
+    build:
+      context: .
+      dockerfile: packages/finance-dashboard/Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: http://localhost:8000
+    container_name: aiagent-dashboard
+    ports:
+      - "3002:3000"
+    depends_on:
+      api:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      start_period: 30s
+      retries: 3
+    networks:
+      - aiagent-network
+    restart: unless-stopped
+
 volumes:
   postgres-data:
   redis-data:
