feat: add CORS configuration and production deployment instructions for finance dashboard

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,14 @@ LOG_LEVEL=info
 # Your WhatsApp JID for linking the web dashboard to your account
 # Find this in your WhatsApp client logs or use format: phonenumber@s.whatsapp.net
 DEFAULT_WHATSAPP_JID=
+
+# === Production Deployment ===
+# CORS: Comma-separated list of allowed origins for the finance dashboard
+# For local development, leave as default. For production, add your dashboard domain.
+# Example: https://finance.yourdomain.com,http://localhost:3002
+CORS_ORIGINS=http://localhost:3002,http://127.0.0.1:3002
+
+# API URL for the dashboard (baked at build time via docker compose build arg)
+# For production, set this to your API's public URL before building the dashboard
+# Example: https://api.yourdomain.com
+NEXT_PUBLIC_API_URL=http://localhost:8000
