--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,8 @@ services:
       GROQ_API_KEY: ${GROQ_API_KEY:-}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
       KB_UPLOAD_DIR: /app/knowledge_base
+      # CORS: comma-separated origins (for production, add your dashboard domain)
+      CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost:3002,http://127.0.0.1:3002}
     ports:
       - "8000:8000"
     volumes:
@@ -141,7 +143,7 @@ services:
       context: .
       dockerfile: packages/finance-dashboard/Dockerfile
       args:
-        NEXT_PUBLIC_API_URL: http://localhost:8000
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     container_name: aiagent-dashboard
     ports:
       - "3002:3000"
