feat: Enhance chat request schema with automated message detection fields
feat: Add seed script for populating finance database with demo data

feat: Update message processing to handle automated messages

feat: Modify chat job processor to manage automated responses

feat: Implement cash flow and account distribution charts in finance dashboard

feat: Create day of week spending chart for enhanced analytics

feat: Add utility functions for chart data aggregation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:whatsapp": "pnpm --filter @ai-boilerplate/whatsapp-client dev",
     "dev:queue": "cd packages/ai-api && uv run python -m ai_api.scripts.run_stream_worker",
     "dev:dashboard": "pnpm --filter finance-dashboard dev",
+    "seed:finance": "cd packages/ai-api && uv run python -m ai_api.scripts.seed_finance",
     "install:all": "pnpm install && cd packages/ai-api && uv sync",
     "lint": "eslint packages/whatsapp-client/src && pnpm --filter finance-dashboard lint && cd packages/ai-api && uv run ruff check .",
     "lint:fix": "eslint packages/whatsapp-client/src --fix && cd packages/ai-api && uv run ruff check . --fix",
